--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -2,20 +2,83 @@
 owner: JustinTzeJi # Your GitHub organization or username, where this repository lives
 repo: uptimes # The name of this repository
 
+workflowSchedule:
+  uptime: "15 */1 * * *"
+
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
-    check: "tcp-ping"
-    ipv6: true
+  # main .gov sites
+  - name: Pejabat Perdana Menteri
+    url: https://www.pmo.gov.my/
+  - name: Kementerian Kewangan
+    url: https://mof.gov.my/portal/ms/
+  - name: Kementerian Ekonomi
+    url: https://www.ekonomi.gov.my/
+  - name: Kementerian Pertahanan
+    url: https://www.mod.gov.my/
+  - name: Kementerian Dalam Negeri
+    url: https://www.moha.gov.my/utama/index.php/ms
+  - name: Kementerian Luar Negeri
+    url: https://www.kln.gov.my/
+  - name: Kementerian Pelaburan, Perdagangan dan Industri
+    url: https://www.miti.gov.my/index.php
+  - name: Kementerian Perdagangan Dalam Negeri dan Kos Sara Hidup
+    url: https://www.kpdn.gov.my/
+  - name: Kementerian Sains, Teknologi dan Inovasi
+    url: https://www.mosti.gov.my/
+  - name: Kementerian Digital
+    url: https://www.digital.gov.my/
+  - name: Kementerian Pendidikan
+    url: https://www.moe.gov.my/
+  - name: Kementerian Pengajian Tinggi
+    url: https://www.mohe.gov.my/
+  - name: Kementerian Kesihatan
+    url: https://moh.gov.my/
+  - name: Kementerian Sumber Manusia
+    url: https://www.mohr.gov.my/
+  - name: Kementerian Pembangunan Usahawan dan Koperasi
+    url: https://www.kuskop.gov.my/
+  - name: Kementerian Pembangunan Wanita, Keluarga dan Masyarakat
+    url: https://www.kpwkm.gov.my/
+  - name: Kementerian Pertanian dan Kesejahteraan Makanan
+    url: https://www.kpkm.gov.my/bm/utama
+  - name: Kementerian Peralihan Tenaga dan Transformasi Air
+    url: https://www.petra.gov.my/
+  - name: Kementerian Sumber Asli dan Alam Sekitar
+    url: https://www.nres.gov.my/
+  - name: Kementerian Perladangan dan Komoditi
+    url: https://www.mpic.gov.my/
+  - name: Kementerian Pengangkutan
+    url: https://www.mot.gov.my/
+  - name: Kementerian Kerja Raya
+    url: https://www.kkr.gov.my/ms/laman-utama
+  - name: Kementerian Perumahan dan Kerajaan Tempatan
+    url: https://www.kpkt.gov.my/
+  - name: Kementerian Pembangunan Luar Bandar
+    url: https://www.rurallink.gov.my/
+  - name: Kementerian Wilayah Persekutuan
+    url: https://www.jwp.gov.my/
+  - name: Kementerian Pelancongan, Seni dan Budaya
+    url: https://www.motac.gov.my/
+  - name: Kementerian Belia dan Sukan
+    url: https://www.kbs.gov.my/home
+  - name: Kementerian Perpaduan Negara
+    url: https://www.perpaduan.gov.my/
+  - name: Kementerian Komunikasi
+    url: https://www.komunikasi.gov.my/
+
+  # subdomain services
+  - name: Belanjawan
+    url: https://belanjawan.mof.gov.my/
+  - name: InfoBanjir
+    url: https://publicinfobanjir.water.gov.my/?lang=en
+  - name: MYDS - Malaysia Government Design System
+    url: https://design.digital.gov.my/
+  - name: data.gov.my
+    url: https://data.gov.my/
+  - name: OpenDOSM
+    url: https://open.dosm.gov.my/
+  - name: MyKasih (Semakan Status, Senarai Kedai)
+    url: https://checkstatus.mykasih.net/sara2/checkstatus
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
@@ -24,13 +87,12 @@ status-website:
   baseUrl: /uptimes
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "Monitoring the _important_ metrics"
+  introMessage: Still work in progress
   navbar:
     - title: Status
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
-
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
